tests/tests_p1/fail/prof/45noprint.min
program
	function void bigger number x; number y do
		y!
start
	bigger(2,3)!
end
